Fix Contrast Issues

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -111,7 +111,7 @@ button {
 
 input,
 textarea {
-  background-color: #cfc4c4;
+  background-color: #844f8b;
   color: #f4f4f4;
 }
 
